[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "llmflowstack"
version = "1.5.0"
authors = [
  { name = "Gustavo Henrique Ferreira Cruz", email = "gustavohferreiracruz@gmail.com" }
]
description = "LLMFlowStack is a framework for training and using LLMs (LLaMA, GPT-OSS, Gemma, ...). Supports DAPT, fine-tuning, and distributed inference."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
  "datasets",
  "kernels==0.12.3",
  "pillow",
  "torchao==0.17.0",
  "transformers==5.10.0",
  "triton; platform_system == 'Linux'",
  "trl",
]