[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "llmflowstack"
version = "1.5.2"
authors = [
  { name = "Gustavo Henrique Ferreira Cruz", email = "gustavohferreiracruz@gmail.com" }
]
description = "LLMFlowStack is a framework for training and using LLMs (LLaMA, GPT-OSS, Gemma, ...). Supports DAPT, fine-tuning, and distributed inference."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
  "datasets==5.0.0",
  "kernels==0.12.3",
  "pillow==12.2.0",
  "torchao==0.17.0",
  "transformers==5.10.0",
  "triton==3.6.0; platform_system == 'Linux'",
  "trl==1.6.0",
]